Remove -XX:MaxPermSize arg from tc launch config